--- a/quizPage.html
+++ b/quizPage.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Quiz App</title>
 
-    <!-- adding css file -->
+    <!-- adding external css file -->
     <link rel="stylesheet" href="./quizPage.css" />
 
     <!--adding favicon-->
     <link rel="icon" type="image/x-icon" href="./images/quizHomeLogo.jpg" />
+
+    <!--bootstrap css file-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -144,6 +146,7 @@
         </div>
       </div>
 
+      <!--next quiz question button-->
       <div class="quesChangeBtnWrap p-1 mt-2">
         <div class="quesChangeBtn" onclick="changeQue()">Next</div>
       </div>
@@ -169,6 +172,7 @@
         <div class="wrongQues">Wrong : <span id="incorrectAns"></span></div>
         <div class="percentage">Percentage : <span id="percentage"></span></div>
 
+        <!--start again and go to home button-->
         <div class="startAgGTHome d-flex justify-content-center mt-3 p-2">
           <div class="startAg me-2" onclick="startAg()">Start Again</div>
           <div class="GTHome" onclick="GTHome()">Go To Home</div>
@@ -176,12 +180,14 @@
       </div>
     </div>
 
+    <!--bootstrap js file-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
 
+    <!--adding external js file-->
     <script src="./quizPage.js"></script>
   </body>
 </html>
